[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Alyssa <alticodes@gmail.com>"]
edition = "2018"

[dependencies]
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.2"

# day3 dependency
gen-iter = { git = "https://github.com/sumeet/gen-iter" }

# day5 and onwards
failure = "^0.1"

# day7 dependencies
permutohedron = "0.2"

# day12 and onwards
pest = "2.0"
pest_derive = "2.0"
num-integer = "0.1"